[gd_scene load_steps=8 format=2]

[ext_resource path="res://assets/PNG/playerShip1_red.png" type="Texture" id=1]
[ext_resource path="res://src/Characters/Players/Player.gd" type="Script" id=2]
[ext_resource path="res://assets/SFX/shoot.ogg" type="AudioStream" id=3]
[ext_resource path="res://assets/SFX/pain.ogg" type="AudioStream" id=4]

[sub_resource type="CircleShape2D" id=1]
radius = 100.0

[sub_resource type="Animation" id=2]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("PlayerSkin:self_modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ) ]
}

[sub_resource type="Animation" id=3]
resource_name = "hit"
length = 1.8
tracks/0/type = "value"
tracks/0/path = NodePath("PlayerSkin:self_modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.3, 0.6, 0.9, 1.2, 1.5, 1.8 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ) ]
}

[node name="Player" type="KinematicBody2D"]
collision_mask = 2
script = ExtResource( 2 )

[node name="PlayerSkin" type="Sprite" parent="."]
texture = ExtResource( 1 )

[node name="Collision" type="CollisionPolygon2D" parent="."]
polygon = PoolVector2Array( -49, -5, -47, 24, -44, 25, -43, 20, -13, 27, -8, 37, 5, 38, 13, 28, 39, 21, 42, 23, 46, 23, 49, -4, 44, -4, 40, 1, 36, 2, 14, -10, 11, -13, 8, -37, -9, -37, -11, -12, -35, 3, -44, -5 )

[node name="ShooterPosition" type="Position2D" parent="."]
position = Vector2( 0, -44 )

[node name="TouchScreenBtn" type="TouchScreenButton" parent="."]
position = Vector2( -103, -100 )
shape = SubResource( 1 )
passby_press = true

[node name="Timer" type="Timer" parent="."]
wait_time = 0.25
autostart = true

[node name="BlinkEffect" type="AnimationPlayer" parent="."]
anims/RESET = SubResource( 2 )
anims/hit = SubResource( 3 )

[node name="Shoot_SFX" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 3 )
volume_db = -10.0

[node name="Pain_SFX" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 4 )

[connection signal="pressed" from="TouchScreenBtn" to="." method="_on_TouchScreenBtn_pressed"]
[connection signal="released" from="TouchScreenBtn" to="." method="_on_TouchScreenBtn_released"]
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
